force-app/main/default/mdapioutput/objects/Account.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Organisation_Region__c</fullName>
        <label>Organisation Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>East Midlands</fullName>
                </value>
                <value>
                    <fullName>England wide</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
                <value>
                    <fullName>North East</fullName>
                </value>
                <value>
                    <fullName>North West</fullName>
                </value>
                <value>
                    <fullName>North West England</fullName>
                </value>
                <value>
                    <fullName>Scotland</fullName>
                </value>
                <value>
                    <fullName>South East</fullName>
                </value>
                <value>
                    <fullName>South West</fullName>
                </value>
                <value>
                    <fullName>Wales</fullName>
                </value>
                <value>
                    <fullName>West Midlands</fullName>
                </value>
                <value>
                    <fullName>Yorkshire and the Humber</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organisation_Type_Details__c</fullName>
        <label>Organisation Type Details</label>
        <type>TextArea</type>
    </fields>
</CustomObject>